--- a/Vidk/Views/Customers/Index.cshtml
+++ b/Vidk/Views/Customers/Index.cshtml
@@ -19,7 +19,7 @@ else
             <tr>
 
                 <th>Customer</th>
-
+                <th>Discount Rate</th>
             </tr>
 
         </thead>
@@ -30,6 +30,9 @@ else
                 <tr>
 
                     <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
+                    <td>@customer.MemberShipType.DiscountRate %</td>
+
+
                 </tr>
             }
 
