--- a/Vidk/Views/Customers/Details.cshtml
+++ b/Vidk/Views/Customers/Details.cshtml
@@ -6,3 +6,8 @@
 
 <h2>@Model.Name</h2>
 
+@if (Model.Birthdate.HasValue )
+{
+    <h2>Birthdate: @Model.Birthdate.Value.ToShortDateString()</h2>
+
+}
