--- a/Vidk/Views/Movies/Index.cshtml
+++ b/Vidk/Views/Movies/Index.cshtml
@@ -6,7 +6,7 @@
 
 @if (!Model.Any())
 {
-    <p> We don't have any customers yet.</p>
+    <p> We don't have any Movies yet.</p>
 
 }
 else
@@ -18,18 +18,20 @@ else
 
             <tr>
 
-                <th>Customer</th>
+                <th>Movies</th>
 
             </tr>
 
         </thead>
         <tbody>
-            @foreach (var customer in Model)
+            @foreach (var movie in Model)
             {
 
                 <tr>
 
-                    <td>@customer.Name</td>
+                    <td>@movie.Name</td>
+                    <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
+
                 </tr>
             }
 
