--- a/Vidk/Views/Customers/New.cshtml
+++ b/Vidk/Views/Customers/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model  Vidk.Models.Customer
+﻿@model  Vidk.ViewModels.NewCustomerViewModel
 
 @{
     ViewBag.Title = "New";
@@ -10,17 +10,23 @@
 @using (Html.BeginForm("Create", "Customers"))
 {
     <div class="form-group">
-            @Html.LabelFor(m => m.Name)
-        @Html.TextBoxFor(m =>m.Name , new { @class="form-control" })
+            @Html.LabelFor(m => m.Customer.Name)
+        @Html.TextBoxFor(m =>m.Customer.Name , new { @class="form-control" })
     </div>
     <div class="form-group">
         <label for="Birthdate">Date of Birthdate</label>
-        @Html.TextBoxFor(m => m.Birthdate, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.Birthdate  , new { @class = "form-control" })
     </div>
     <div class="checkbox">
         <label>
-            @Html.CheckBoxFor(m => m.IsSubscribedToNewsletter) is subscribed to news letter
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter) is subscribed to news letter
 
         </label>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.MemberShipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MemberShipTypeId, new SelectList(Model.MemberShipTypes, "Id", "Name"), "select membership ", new { @class ="form-control" } )
+    </div>
+        @Html.HiddenFor(m => m.Customer.Id)
+    <button type="submit"  class="btn btn-primary">Save</button>
 }
