--- a/Vidk/Views/Movies/Index.cshtml
+++ b/Vidk/Views/Movies/Index.cshtml
@@ -12,6 +12,7 @@
 else
 {
 
+    @Html.ActionLink( "Add New Movie" , "New" ,"Movies", null ,new { @class = "btn btn-info"} )
     <table class="table table-bordered table-hover">
 
         <thead>
@@ -29,7 +30,7 @@ else
 
                 <tr>
 
-                    <td>@movie.Name</td>
+                    <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new {id = movie.Id }, null)</td>
                     <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
 
                 </tr>
