--- a/Vidk/Views/Customers/New.cshtml
+++ b/Vidk/Views/Customers/New.cshtml
@@ -12,10 +12,12 @@
     <div class="form-group">
             @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m =>m.Customer.Name , new { @class="form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
     <div class="form-group">
         <label for="Birthdate">Date of Birthdate</label>
         @Html.TextBoxFor(m => m.Customer.Birthdate  , new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
     </div>
     <div class="checkbox">
         <label>
@@ -26,6 +28,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MemberShipTypeId)
         @Html.DropDownListFor(m => m.Customer.MemberShipTypeId, new SelectList(Model.MemberShipTypes, "Id", "Name"), "select membership ", new { @class ="form-control" } )
+        @Html.ValidationMessageFor(m => m.Customer.MemberShipTypeId)
     </div>
         @Html.HiddenFor(m => m.Customer.Id)
     <button type="submit"  class="btn btn-primary">Save</button>
